@@ -1,4 +1,10 @@
 2007-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/forcefield.cpp: Added ConjugateGradientsInitialize() and
+	ConjugateGradientsTakeNSteps(). ConjugateGradients() still exists and
+	uses these two new function.
+
+2007-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 	
 	* src/mol.cpp: changes OBMol::NewBond, fixes PR#1666785. AddBond() was
 	resizing the _vbond vector and NewBond() used push_back to add items.
